--- a/元神.md
+++ b/元神.md
@@ -1,4 +1,4 @@
-《原神》是一款开放世界角色扮演游戏，由中国游戏公司 miHoYo 开发和发行。这款游戏在视觉上令人惊叹，拥有美丽的游戏世界和精彩的角色设计。它提供了丰富的探索和冒险体验，玩家可以在奇幻的大陆上自由探索，并与各种各样的角色和敌人战斗。
+<img width="848" alt="屏幕截图 2023-11-26 113321" src="https://github.com/wjjcrazy/www/assets/152046137/17b671cd-2df6-4e2f-b3d4-3e4f101762d6">《原神》是一款开放世界角色扮演游戏，由中国游戏公司 miHoYo 开发和发行。这款游戏在视觉上令人惊叹，拥有美丽的游戏世界和精彩的角色设计。它提供了丰富的探索和冒险体验，玩家可以在奇幻的大陆上自由探索，并与各种各样的角色和敌人战斗。
 
 《原神》还具有复杂和有趣的剧情，通过追寻主线任务和完成各种支线任务，玩家可以逐渐了解游戏世界的故事背景和角色之间的关系。此外，游戏中还有丰富的角色培养系统和战斗系统，玩家可以收集和培养不同的角色，利用各自的技能和能力来组建强大的战斗团队。
 
@@ -14,10 +14,5 @@
 
 4. 剧情任务：游戏有一个主线剧情和大量的支线任务。通过完成任务，你可以解锁很多新的内容，包括角色、武器和故事剧情。
 
-5. 团队合作：原神支持多人合作游玩，你可以与其他玩家组队进行挑战副本、战斗boss和探索世界。与其他玩家一起合作可以更快地完成任务并享受更多乐趣。
+5. 团队合作：原神支持多人合作游玩，你可以与其他玩家组队进行挑战副本、战斗boss和探索世界。与其他玩家一起合作可以更快地完成任务并享受更多
 
-![](C:\Users\20789\Pictures\Screenshots\屏幕截图 2023-11-26 113321.png)
-
-![](C:\Users\20789\Pictures\Screenshots\屏幕截图 2023-11-26 113709.png)
-
-![](C:\Users\20789\Pictures\Screenshots\屏幕截图 2023-11-26 113431.png)
