--- a/元神.md
+++ b/元神.md
@@ -15,3 +15,4 @@
 
 5. 团队合作：原神支持多人合作游玩，你可以与其他玩家组队进行挑战副本、战斗boss和探索世界。与其他玩家一起合作可以更快地完成任务并享受更多
 
+<img width="938" alt="屏幕截图 2023-10-17 200845" src="https://github.com/wjjcrazy/www/assets/152046137/c3936f39-165e-487e-87e6-3cadeea906d4">
